--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/kit": "^2.5.17",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie": "^0.5.4",
 		"@types/jsonwebtoken": "^9.0.6",
@@ -25,12 +26,12 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prisma": "^4.16.2",
-		"svelte": "^4.0.0",
+		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.4",
 		"svelte-preprocess": "^5.1.4",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.2",
-		"vite": "^4.5.3"
+		"vite": "^5.3.2"
 	},
 	"type": "module",
 	"dependencies": {
